--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         .top-bar { height: 45px; width: 100%; background: linear-gradient(90deg, #d50000 0%, #003a6c 50%, #008a4f 100%); display: flex; align-items: center; padding: 0 15px; color: white; font-weight: bold; box-sizing: border-box; }
         .header { background: white; padding: 15px 25px; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
         .dashboard-grid { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 20px; padding: 20px; flex: 1; overflow: hidden; }
-        .column { background: white; border-top: 5px solid var(--bosch-blue); display: flex; flex-direction: column; overflow: hidden; border-radius: 4px; box-shadow: 0 4px 6px rgba(0,0,0,0.05); }
+        .column { background: white; border-top: 5px solid var(--bosch-blue); display: flex; flex-direction: column; overflow: hidden; border-radius: 4px; }
         .col-header { padding: 15px; background: #f8f9fa; border-bottom: 1px solid #ddd; font-weight: bold; font-size: 1.2em; display: flex; justify-content: space-between; align-items: center; }
-        .col-header a { text-decoration: none; color: inherit; display: flex; align-items: center; gap: 8px; font-size: 0.9em; cursor: pointer; }
+        .col-header a { text-decoration: none; color: inherit; cursor: pointer; }
         .machine-list { flex: 1; overflow-y: auto; padding: 10px; }
         .card { padding: 12px; border-bottom: 1px solid #eee; border-left: 8px solid #ccc; margin-bottom: 8px; background: #fff; position: relative; }
         .card.warning { border-left-color: #ffa500; }
@@ -30,13 +30,12 @@
         .card-info { display: flex; justify-content: space-between; align-items: flex-start; }
         .m-id { font-weight: bold; font-size: 1.1em; }
         .m-rest { font-weight: bold; font-size: 1.1em; }
-        .m-paket { font-size: 0.85em; color: var(--bosch-red); font-weight: 600; margin-top: 2px; }
+        .m-paket { font-size: 0.85em; color: var(--bosch-red); font-weight: bold; margin-top: 2px; }
         select { width: 100%; padding: 5px; border: 1px solid #ccc; border-radius: 2px; margin-top: 8px; }
-        .nav-btn { padding: 8px 15px; cursor: pointer; border: 1px solid #ccc; background: white; font-weight: bold; color: var(--bosch-blue); border-radius: 2px; font-size: 13px; }
+        .nav-btn { padding: 8px 15px; cursor: pointer; border: 1px solid #ccc; background: white; font-weight: bold; color: var(--bosch-blue); border-radius: 2px; }
         .btn-primary { background: var(--bosch-blue); color: white; border: none; }
         .modal { position: fixed; inset: 0; background: rgba(0,0,0,0.7); display: none; justify-content: center; align-items: center; z-index: 4000; }
-        .modal-box { background: white; padding: 30px; border-top: 8px solid var(--bosch-red); width: 450px; text-align: left; border-radius: 4px; }
-        input, textarea { width: 100%; padding: 10px; margin: 5px 0; border: 1px solid #ccc; box-sizing: border-box; }
+        .modal-box { background: white; padding: 30px; border-top: 8px solid var(--bosch-red); width: 450px; border-radius: 4px; }
         #timeout-bar-container { position: absolute; bottom: 0; left: 0; width: 100%; height: 4px; background: #ddd; }
         #timeout-bar { height: 100%; width: 0%; background: var(--bosch-red); }
     </style>
@@ -45,7 +44,7 @@
 
 <div class="top-bar">Zentrales Wartungs Dashboard W430</div>
 <div class="header">
-    <div><span style="color:var(--bosch-red);font-weight:900;font-size:24px;">BOSCH</span> <span style="font-weight:bold;color:#555;margin-left:10px;">Maschinenstatus</span></div>
+    <div><span style="color:var(--bosch-red);font-weight:900;font-size:24px;">BOSCH</span> <span style="font-weight:bold;margin-left:10px;color:#555;">Statusübersicht</span></div>
     <div style="display:flex; gap:10px;">
         <button class="nav-btn" onclick="document.getElementById('helpModal').style.display='flex'">ℹ️ Hilfe</button>
         <button class="nav-btn" onclick="exportAuditLog()">📊 CSV Export</button>
@@ -55,57 +54,38 @@
 </div>
 
 <div class="dashboard-grid">
-    <div class="column">
-        <div class="col-header"><a onclick="openManagedWindow('agie.html')">⚡ Agie ➔</a> <span id="count-agie">0</span></div>
-        <div class="machine-list" id="list-agie"></div>
-    </div>
-    <div class="column" style="border-top-color: var(--bosch-green);">
-        <div class="col-header"><a onclick="openManagedWindow('unotron.html')">🧪 Unotron ➔</a> <span id="count-uno">0</span></div>
-        <div class="machine-list" id="list-uno"></div>
-    </div>
-    <div class="column" style="border-top-color: var(--bosch-light-blue);">
-        <div class="col-header"><a onclick="openManagedWindow('he.html')">⚙️ HE ➔</a> <span id="count-he">0</span></div>
-        <div class="machine-list" id="list-he"></div>
-    </div>
+    <div class="column"><div class="col-header"><a onclick="window.open('agie.html','_blank')">⚡ Agie ➔</a> <span id="count-agie">0</span></div><div class="machine-list" id="list-agie"></div></div>
+    <div class="column" style="border-top-color: var(--bosch-green);"><div class="col-header"><a onclick="window.open('unotron.html','_blank')">🧪 Unotron ➔</a> <span id="count-uno">0</span></div><div class="machine-list" id="list-uno"></div></div>
+    <div class="column" style="border-top-color: var(--bosch-light-blue);"><div class="col-header"><a onclick="window.open('he.html','_blank')">⚙️ HE ➔</a> <span id="count-he">0</span></div><div class="machine-list" id="list-he"></div></div>
 </div>
 
 <div id="timeout-bar-container"><div id="timeout-bar"></div></div>
 
-<div id="loginModal" class="modal">
-    <div class="modal-box" style="text-align: center;">
-        <h3 id="modalTitle">Login</h3>
-        <input type="email" id="mEmail" placeholder="E-Mail">
-        <input type="password" id="mPass" placeholder="Passwort">
-        <div id="regExtra" style="display:none;">
-            <input type="text" id="mInvite" placeholder="Einladungscode">
-            <p style="font-size:11px;color:#666;">Den Einladungscode erhalten Sie von Ihrem TL, FK oder Admin.</p>
-        </div>
-        <button class="nav-btn btn-primary" style="width:100%;margin-top:10px;" onclick="handleAuthAction()">Bestätigen</button>
-        <p id="toggleT" style="cursor:pointer;color:var(--bosch-blue);font-size:12px;" onclick="toggleM()">Konto erstellen?</p>
-        <button class="nav-btn" style="width:100%" onclick="closeModals()">Abbrechen</button>
-    </div>
-</div>
+<div id="loginModal" class="modal"><div class="modal-box" style="text-align: center;">
+    <h3 id="modalTitle">Login</h3>
+    <input type="email" id="mEmail" placeholder="E-Mail" style="width:100%; padding:10px; margin-bottom:5px;">
+    <input type="password" id="mPass" placeholder="Passwort" style="width:100%; padding:10px; margin-bottom:10px;">
+    <div id="regExtra" style="display:none;"><input type="text" id="mInvite" placeholder="Einladungscode" style="width:100%; padding:10px; margin-bottom:5px;">
+    <p style="font-size:11px;color:#666;">Den Einladungscode erhalten Sie von Ihrem TL, FK oder Admin.</p></div>
+    <button class="nav-btn btn-primary" style="width:100%;margin-top:10px;" onclick="handleAuthAction()">Bestätigen</button>
+    <p id="toggleT" style="cursor:pointer;color:var(--bosch-blue);font-size:12px;margin-top:10px;" onclick="toggleM()">Konto erstellen?</p>
+    <button class="nav-btn" style="width:100%;margin-top:5px;" onclick="closeModals()">Abbrechen</button>
+</div></div>
 
-<div id="adminModal" class="modal">
-    <div class="modal-box">
-        <h3>Einsteller-Liste bearbeiten</h3>
-        <textarea id="einstellerTextarea" rows="6"></textarea>
-        <button class="nav-btn btn-primary" style="width:100%; margin-top:10px;" onclick="saveEinstellerList()">Liste speichern</button>
-        <button class="nav-btn" style="width:100%; margin-top:5px;" onclick="closeModals()">Abbrechen</button>
-    </div>
-</div>
+<div id="adminModal" class="modal"><div class="modal-box">
+    <h3>Einsteller-Liste bearbeiten</h3>
+    <textarea id="einstellerTextarea" rows="6" style="width:100%; box-sizing:border-box; padding:10px;"></textarea>
+    <button class="nav-btn btn-primary" style="width:100%; margin-top:10px;" onclick="saveEinstellerList()">Liste speichern</button>
+    <button class="nav-btn" style="width:100%; margin-top:5px;" onclick="closeModals()">Abbrechen</button>
+</div></div>
 
-<div id="helpModal" class="modal">
-    <div class="modal-box">
-        <h2 style="color:var(--bosch-blue); border-bottom: 2px solid var(--bosch-red); padding-bottom: 10px;">System-Anleitung</h2>
-        <p><strong>Status-Farben:</strong> Gelb (Warnung), Rot (Kritisch), Dunkelrot (Überfällig).</p>
-        <p><strong>In Arbeit:</strong> Gelbe Karte bedeutet, ein Einsteller ist zugewiesen.</p>
-        <p><strong>Auto-Logout:</strong> Nach 70s Inaktivität erfolgt ein Logout.</p>
-        <hr>
-        <strong>Verantwortlich: Norman Schultheis</strong>
-        <button class="nav-btn btn-primary" style="width:100%; margin-top:20px;" onclick="closeModals()">Schließen</button>
-    </div>
-</div>
+<div id="helpModal" class="modal"><div class="modal-box">
+    <h2 style="color:var(--bosch-blue); border-bottom: 2px solid var(--bosch-red); padding-bottom: 10px;">System-Hilfe</h2>
+    <p><strong>Auto-Logout:</strong> Erfolgt nach 70s Inaktivität.</p>
+    <p>Den Einladungscode erhalten Sie von Ihrem TL, FK oder Admin.</p>
+    <p><strong>Verantwortlich: Norman Schultheis</strong></p>
+    <button class="nav-btn btn-primary" style="width:100%; margin-top:20px;" onclick="closeModals()">Schließen</button>
+</div></div>
 
 <script>
     const firebaseConfig = { apiKey: "AIzaSyD6xGCtU-felOyO_BRsFnVlB4yhC46FgYg", authDomain: "bosch-agie-wartung.firebaseapp.com", databaseURL: "https://bosch-agie-wartung-default-rtdb.europe-west1.firebasedatabase.app", projectId: "bosch-agie-wartung" };
@@ -116,36 +96,23 @@
     const UNO_STEPS = [{total:2000, pkg:"P1, P2"}, {total:4000, pkg:"P3"}, {total:10000, pkg:"P1"}, {total:14000, pkg:"P5"}, {total:18000, pkg:"P1, P2"}, {total:26000, pkg:"P1"}, {total:28000, pkg:"P6, P7"}, {total:30000, pkg:"P3"}, {total:34000, pkg:"P1, P2"}, {total:42000, pkg:"P1"}, {total:50000, pkg:"P1, P2"}, {total:56000, pkg:"P3"}, {total:58000, pkg:"P1"}, {total:66000, pkg:"P1, P2"}, {total:74000, pkg:"P1"}, {total:82000, pkg:"P1, P2"}, {total:90000, pkg:"P3"}, {total:98000, pkg:"P1"}, {total:104000, pkg:"WP RESET"}];
 
     let state = { config:{}, assignments:{}, agie:{}, uno:{}, he:{} };
-    let isReg = false, managedWindows = [], inactivityTimer, startTime;
+    let inactivityTimer, startTime, isReg = false;
 
-    // Timer Logik
     window.resetInactivityTimer = function() {
         clearTimeout(inactivityTimer);
         if (auth.currentUser) {
             startTime = Date.now();
-            inactivityTimer = setTimeout(forceLogout, 70000);
+            inactivityTimer = setTimeout(() => { auth.signOut(); alert("Logout wegen Inaktivität."); }, 70000);
             updateBar();
         }
     }
     function updateBar() {
         if (!auth.currentUser) return;
-        const elapsed = Date.now() - startTime;
-        const pct = Math.min(100, (elapsed / 70000) * 100);
+        const pct = Math.min(100, ((Date.now() - startTime) / 70000) * 100);
         document.getElementById('timeout-bar').style.width = pct + "%";
         if (pct < 100) requestAnimationFrame(updateBar);
     }
-    async function forceLogout() {
-        managedWindows.forEach(win => { if(!win.closed) win.close(); });
-        managedWindows = [];
-        if(auth.currentUser) { await auth.signOut(); alert("Sitzung beendet (Inaktivität)."); }
-    }
 
-    function openManagedWindow(url) {
-        const win = window.open(url, '_blank');
-        if(win) managedWindows.push(win);
-    }
-
-    // Firebase Listener
     db.ref('config').on('value', s => { state.config = s.val() || {}; updateUI(); });
     db.ref('dashboardAssignments').on('value', s => { state.assignments = s.val() || {}; updateUI(); });
     db.ref('maintenanceState').on('value', s => { state.agie = s.val() || {}; updateUI(); });
@@ -159,29 +126,34 @@
         updateUI();
     });
 
-    // Auth & Modals
+    async function exportAuditLog() {
+        if(prompt("Admin Passwort:") !== state.config.AdminPW) return;
+        const logs = (await db.ref('auditLog').once('value')).val();
+        if(!logs) return alert("Keine Daten.");
+        let csv = "\ufeffDatum;Uhrzeit;Benutzer;Aktion;Maschine;Details;Rest;Gesamt;Paket\n";
+        Object.values(logs).forEach(l => csv += `${l.Datum};${l.Uhrzeit};${l.Benutzer};${l.Aktion};${l.Maschine};${l.Details};${l.Reststückzahl||''};${l.Gesamtstückzahl||''};${l.Paket||''}\n`);
+        const link = document.createElement("a");
+        link.href = URL.createObjectURL(new Blob([csv], { type: 'text/csv;charset=utf-8;' }));
+        link.download = `Wartungs_AuditLog.csv`;
+        link.click();
+    }
+
     function handleLoginClick() { if(auth.currentUser) auth.signOut(); else document.getElementById('loginModal').style.display='flex'; }
     function closeModals() { document.querySelectorAll('.modal').forEach(m => m.style.display='none'); }
-    function toggleM() { isReg=!isReg; document.getElementById('regExtra').style.display=isReg?'block':'none'; document.getElementById('modalTitle').innerText=isReg?'Registrieren':'Login'; }
+    function toggleM() { isReg=!isReg; document.getElementById('regExtra').style.display=isReg?'block':'none'; }
 
     async function handleAuthAction() {
-        const email = document.getElementById('mEmail').value, pass = document.getElementById('mPass').value;
+        const e = document.getElementById('mEmail').value, p = document.getElementById('mPass').value;
         try {
             if(isReg) {
                 if(document.getElementById('mInvite').value !== "bosch2026") return alert("Code falsch!");
-                await auth.createUserWithEmailAndPassword(email, pass);
-            } else { await auth.signInWithEmailAndPassword(email, pass); }
+                await auth.createUserWithEmailAndPassword(e, p);
+            } else await auth.signInWithEmailAndPassword(e, p);
             closeModals();
-        } catch(e) { alert(e.message); }
+        } catch(err) { alert(err.message); }
     }
 
-    function openAdminModal() {
-        if(prompt("Admin PW:") === state.config.AdminPW) {
-            document.getElementById('adminModal').style.display = 'flex';
-            document.getElementById('einstellerTextarea').value = (state.config.einstellerListe || []).join(', ');
-        } else alert("Falsches Passwort!");
-    }
-
+    function openAdminModal() { if(prompt("Admin PW:") === state.config.AdminPW) document.getElementById('adminModal').style.display='flex'; }
     async function saveEinstellerList() {
         const list = document.getElementById('einstellerTextarea').value.split(',').map(s=>s.trim()).filter(s=>s!=="");
         await db.ref('config/einstellerListe').set(list);
@@ -189,32 +161,12 @@
     }
 
     async function safeSave(key, val) {
-        if(!auth.currentUser) return alert("Bitte erst einloggen!");
-        if(prompt("Admin Passwort zur Bestätigung:") !== state.config.AdminPW) return alert("Code falsch!");
+        if(!auth.currentUser) return alert("Bitte einloggen!");
+        if(prompt("Bestätigung Admin PW:") !== state.config.AdminPW) return;
         await db.ref(`dashboardAssignments/${key}`).set(val);
         resetInactivityTimer();
     }
 
-    // CSV EXPORT (Optimiert für PowerBI/Excel)
-    async function exportAuditLog() {
-        if(prompt("Admin Passwort für Export:") !== state.config.AdminPW) return alert("Keine Berechtigung!");
-        const snapshot = await db.ref('auditLog').once('value');
-        const logs = snapshot.val();
-        if(!logs) return alert("Keine Daten.");
-        
-        let csv = "\ufeffDatum;Uhrzeit;Benutzer;Aktion;Maschine;Details;Reststückzahl;Gesamtstückzahl;Paket;Status\n";
-        Object.values(logs).forEach(l => {
-            // Falls alte Logs existieren, Felder abfangen
-            csv += `${l.Datum || ''};${l.Uhrzeit || ''};${l.Benutzer || l.user || ''};${l.Aktion || l.action || ''};${l.Maschine || l.machine || ''};${l.Details || l.detail || ''};${l.Reststückzahl || ''};${l.Gesamtstückzahl || ''};${l.Paket || ''};${l.Status || ''}\n`;
-        });
-        
-        const link = document.createElement("a");
-        link.href = URL.createObjectURL(new Blob([csv], { type: 'text/csv;charset=utf-8;' }));
-        link.download = `Wartungs_AuditLog.csv`;
-        link.click();
-    }
-
-    // UI Rendering
     function updateUI() {
         renderCol('list-agie', 'count-agie', state.agie, 'A', 16000);
         renderCol('list-uno', 'count-uno', state.uno, 'U', 2000);
@@ -222,36 +174,36 @@
     }
 
     function renderCol(id, cId, raw, pre, interval) {
-        if(!raw.cloudRawData) return;
-        const warnLimit = interval * 0.125, critLimit = interval * 0.03125; 
-
+        if(!raw || !raw.cloudRawData) return;
+        const warnLimit = interval * 0.125, critLimit = interval * 0.03125;
         const data = raw.cloudRawData.map(item => {
             const sId = item.StationNo || item.STATIONNO;
-            const cIdx = raw.extraCycles?.[sId] || 0;
+            if(!sId) return null;
+            const cIdx = (raw.extraCycles && raw.extraCycles[sId]) || 0;
             let ist, target, pkg;
-            if(pre==='A') { 
-                ist = (parseInt(item.Parts)||0) - (raw.agieOffsets?.[sId]||0); 
+            if(pre==='A') {
+                ist = (parseInt(item.Parts)||0) - ((raw.agieOffsets && raw.agieOffsets[sId])||0);
                 target = 16000 + (cIdx * 16000);
                 pkg = AGIE_PKGS[Math.min(cIdx, AGIE_PKGS.length-1)];
             } else if(pre==='U') {
                 ist = parseInt(item["COUNT(*)"]||0);
                 const tObj = UNO_STEPS[cIdx] || { total: 104000+((cIdx-18)*5000), pkg: "Folge" };
                 target = tObj.total; pkg = tObj.pkg;
-            } else {
-                ist = (parseInt(item.Parts)||0) - (raw.heOffsets?.[sId]||0);
+            } else { // HE Logik
+                ist = (parseInt(item.Parts)||0) - ((raw.heOffsets && raw.heOffsets[sId])||0);
                 target = 156000 + (cIdx * 156000);
-                pkg = "Wartung";
+                pkg = "Wartung P" + (cIdx + 1); // Zeigt Paket an
             }
-            return { id:pre+sId, rest: target-ist, key:pre+sId, pkg };
-        }).filter(m => m.rest < warnLimit).sort((a,b) => a.rest - b.rest);
+            return { id:pre+"-"+sId, rest:target-ist, key:pre+sId, pkg };
+        }).filter(m => m && m.rest < warnLimit).sort((a,b) => a.rest - b.rest);
 
         document.getElementById(cId).innerText = data.length;
         document.getElementById(id).innerHTML = data.map(m => {
             const assigned = state.assignments[m.key] || "";
             const isWorking = assigned !== "";
-            const blinkClass = (m.rest <= 0 && !isWorking) ? 'blink overdue' : (m.rest <= 0 ? 'overdue' : (m.rest < critLimit ? 'critical' : 'warning'));
+            const status = (m.rest <= 0 && !isWorking) ? 'blink overdue' : (m.rest <= 0 ? 'overdue' : (m.rest < critLimit ? 'critical' : 'warning'));
             return `
-            <div class="card ${blinkClass} ${isWorking?'in-progress':''}">
+            <div class="card ${status} ${isWorking?'in-progress':''}">
                 <div class="card-info">
                     <div><div class="m-id">${m.id}</div><div class="m-paket">${m.pkg}</div></div>
                     <div class="m-rest">${m.rest.toLocaleString()}</div>
