--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 
     const AGIE_PKGS = ["P1/2", "P1/3", "P1/2", "P1/4", "P1/2/3", "P1/5", "P1/2", "P1/3", "P1/2", "P1/4", "P1/2/3", "P1/6/7", "P1/2"];
     const UNO_STEPS = [{total:2000, pkg:"P1, P2"}, {total:4000, pkg:"P3"}, {total:10000, pkg:"P1"}, {total:14000, pkg:"P5"}, {total:18000, pkg:"P1, P2"}, {total:26000, pkg:"P1"}, {total:28000, pkg:"P6, P7"}, {total:30000, pkg:"P3"}, {total:34000, pkg:"P1, P2"}, {total:42000, pkg:"P1"}, {total:50000, pkg:"P1, P2"}, {total:56000, pkg:"P3"}, {total:58000, pkg:"P1"}, {total:66000, pkg:"P1, P2"}, {total:74000, pkg:"P1"}, {total:82000, pkg:"P1, P2"}, {total:90000, pkg:"P3"}, {total:98000, pkg:"P1"}, {total:104000, pkg:"WP RESET"}];
+    const HE_PKGS = ["P 6/7/9/12", "P 1/2/3/4/5/6/7/8/10/11/12", "P 6/7/9/12/13", "P 1/3/4/5/6/7/8/10/11/12"];
 
     let state = { config:{}, assignments:{}, agie:{}, uno:{}, he:{} };
     let inactivityTimer, startTime, isReg = false;
@@ -126,15 +127,23 @@
         updateUI();
     });
 
+    async function writeLog(action, machine, detail) {
+        if(!auth.currentUser) return;
+        await db.ref('auditLog').push({
+            Datum: new Date().toLocaleDateString('de-DE'), Uhrzeit: new Date().toLocaleTimeString('de-DE'),
+            Benutzer: auth.currentUser.email, Aktion: action, Maschine: machine, Details: detail
+        });
+    }
+
     async function exportAuditLog() {
         if(prompt("Admin Passwort:") !== state.config.AdminPW) return;
         const logs = (await db.ref('auditLog').once('value')).val();
         if(!logs) return alert("Keine Daten.");
-        let csv = "\ufeffDatum;Uhrzeit;Benutzer;Aktion;Maschine;Details;Rest;Gesamt;Paket\n";
-        Object.values(logs).forEach(l => csv += `${l.Datum};${l.Uhrzeit};${l.Benutzer};${l.Aktion};${l.Maschine};${l.Details};${l.Reststückzahl||''};${l.Gesamtstückzahl||''};${l.Paket||''}\n`);
+        let csv = "\ufeffDatum;Uhrzeit;Benutzer;Aktion;Maschine;Details\n";
+        Object.values(logs).forEach(l => csv += `${l.Datum};${l.Uhrzeit};${l.Benutzer};${l.Aktion};${l.Maschine};${l.Details}\n`);
         const link = document.createElement("a");
         link.href = URL.createObjectURL(new Blob([csv], { type: 'text/csv;charset=utf-8;' }));
-        link.download = `Wartungs_AuditLog.csv`;
+        link.download = `Wartungs_Log.csv`;
         link.click();
     }
 
@@ -157,6 +166,7 @@
     async function saveEinstellerList() {
         const list = document.getElementById('einstellerTextarea').value.split(',').map(s=>s.trim()).filter(s=>s!=="");
         await db.ref('config/einstellerListe').set(list);
+        writeLog("Einsteller Liste geändert", "System", "Neue Liste gespeichert");
         closeModals();
     }
 
@@ -164,6 +174,7 @@
         if(!auth.currentUser) return alert("Bitte einloggen!");
         if(prompt("Bestätigung Admin PW:") !== state.config.AdminPW) return;
         await db.ref(`dashboardAssignments/${key}`).set(val);
+        writeLog(val === "" ? "Zuweisung entfernt" : "Maschine zugewiesen", key, val);
         resetInactivityTimer();
     }
 
@@ -175,7 +186,9 @@
 
     function renderCol(id, cId, raw, pre, interval) {
         if(!raw || !raw.cloudRawData) return;
-        const warnLimit = interval * 0.125, critLimit = interval * 0.03125;
+        const warnLimit = pre === 'H' ? 19500 : interval * 0.125;
+        const critLimit = pre === 'H' ? 4800 : interval * 0.03125;
+        
         const data = raw.cloudRawData.map(item => {
             const sId = item.StationNo || item.STATIONNO;
             if(!sId) return null;
@@ -190,9 +203,10 @@
                 const tObj = UNO_STEPS[cIdx] || { total: 104000+((cIdx-18)*5000), pkg: "Folge" };
                 target = tObj.total; pkg = tObj.pkg;
             } else { // HE Logik
-                ist = (parseInt(item.Parts)||0) - ((raw.heOffsets && raw.heOffsets[sId])||0);
+                const off = (raw.heOffsets && raw.heOffsets[sId]) || (raw.manualOffsets && raw.manualOffsets[sId]) || 0;
+                ist = (parseInt(item.Parts)||0) - off;
                 target = 156000 + (cIdx * 156000);
-                pkg = "Wartung P" + (cIdx + 1); // Zeigt Paket an
+                pkg = "Wartung " + HE_PKGS[cIdx % 4];
             }
             return { id:pre+"-"+sId, rest:target-ist, key:pre+sId, pkg };
         }).filter(m => m && m.rest < warnLimit).sort((a,b) => a.rest - b.rest);
